# lazarobox-img

./: .gitignore  Cargo.toml  LICENSE  README.md
.atl/: skill-registry.md
docs/: architecture.md  architecture_guidelines.md  metadata-policy.md  optimization-policy.md  roadmap.md
src/: README.md  converter.rs  export.rs  inspector.rs  main.rs  optimizer.rs  policy.rs  report.rs  scanner.rs  theme.rs  update.rs
src/app/: browser.rs  controller.rs  mod.rs  state.rs
src/encoders/: jpeg.rs  mod.rs  png.rs  webp.rs
src/metadata/: ai.rs  editor.rs  image.rs  mod.rs  privacy.rs  reader.rs  report.rs  rights.rs  seo.rs  social.rs  technical.rs  types.rs  web.rs
src/metadata/parsers/: ai.rs  mod.rs  rights.rs  seo.rs  technical.rs  web.rs
src/metadata/plan/: actions.rs  builder.rs  mod.rs  plan.rs  rules.rs
src/metadata/writer/: ai.rs  apply.rs  mod.rs  seo.rs
src/tui/: app.rs  events.rs  mod.rs  terminal.rs
src/tui/screens/: common.rs  convert.rs  home.rs  inspect.rs  metadata.rs  mod.rs  optimize.rs  settings.rs
src/tui/widgets/: footer.rs  logo.rs  menu.rs  mod.rs
src/types/: mod.rs  output_format.rs  progress.rs
src/ui/: header.rs  image.rs  metadata.rs  mod.rs  plan.rs  progress.rs  project.rs  summary.rs  utils.rs  writer.rs
