[package]
name = "lazarobox-img"
version = "0.4.1"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
image = "0.25"
webp = "0.3"
indicatif = "0.18"
console = "0.16"
walkdir = "2"
anyhow = "1"
kamadak-exif = "0.6.1"
ratatui = "0.30.2"
crossterm = "0.29.0"
little_exif = "0.6.23"
