[package]
name = "lazarobox-img"
version = "0.4.3"
edition = "2024"
description = "Optimizador de imágenes y editor de metadatos (EXIF) con CLI y TUI."
repository = "https://github.com/pichu2707/lazarobox-img"
license = "MIT"
readme = "README.md"
keywords = ["image", "optimizer", "webp", "exif", "tui"]
categories = ["command-line-utilities", "multimedia::images"]

[dependencies]
clap = { version = "4", features = ["derive"] }
image = "0.25"
webp = "0.3"
indicatif = "0.18"
console = "0.16"
walkdir = "2"
anyhow = "1"
kamadak-exif = "0.6.1"
ratatui = "0.30.2"
crossterm = "0.29.0"
little_exif = "0.6.23"
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = "3"
